@@ -1,3 +1,13 @@
+2004-12-05  Davyd Madeley  <davyd@madeley.id.au>
+
+	* weather.c: Updated regexp and parsing of the visibility data field
+	  to include international standard as well as a wider variety of
+	  values in the US exception to it.
+	  http://www.met.tamu.edu/class/METAR/metar-pg7-vis.html
+
+	  Closes #151896 and 160475. Patch from Frank Solensky
+	  <frank@solensky.org>.
+
 2004-12-04  Danilo Šegan  <dsegan@gmx.net>
 
 	* Locations.xml.in: Clean up Serbia and Montenegro entries, move
